fixed link in footer

--- a/index.html
+++ b/index.html
@@ -151,7 +151,10 @@
       <address>
         <ul>
           <li>
-            <a href="https://goo.gl/maps/8fUT9mv14ZaH1TDk7?coh=178571&entry=tt"
+            <a
+              href="https://goo.gl/maps/8fUT9mv14ZaH1TDk7?coh=178571&entry=tt"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
